# wayscloud-cli

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
tests/: test_smoke.py
wayscloud_cli/: __init__.py  __main__.py  config.py  output.py  sdk.py
wayscloud_cli/commands/: app.py  db.py  dns.py  iot.py  login.py  redis.py  shell.py  storage.py  vps.py
