[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wayscloud-cli"
version = "0.2.2"
description = "Command-line interface for WAYSCloud — manage VPS, DNS, databases, storage, apps, IoT, and more"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "wayscloud>=0.1.0",
    "typer>=0.9",
    "rich>=13.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://wayscloud.services"
Documentation = "https://docs.wayscloud.services/integrations/#wayscloud-cli"
Repository = "https://github.com/wayscloudas/wayscloud-provision-api"
Issues = "https://github.com/wayscloudas/wayscloud-provision-api/issues"

[tool.setuptools.packages.find]
include = ["wayscloud_cli*"]
exclude = ["tests*"]

[project.scripts]
cloud = "wayscloud_cli.__main__:main"
